--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
             <h1 class="text-5xl font-bold">Stay updated!</h1>
             <p class="pt-6 pb-6">Join 60,000+ product managers receiving monthly updates on:</p>
             <div class="flex flex-row gap-4 mb-4">
-                <img src="icon-list.svg" alt="icon for list"/>
+                <img src="dist/icon-list.svg" alt="icon for list"/>
                <p>Product discovery and building what matters</p>
             </div>
             <div class="flex flex-row gap-4 mb-4">
-                <img src="icon-list.svg" alt="icon for list"/>
+                <img src="dist/icon-list.svg" alt="icon for list"/>
                 <p>Measuring to ensure updates are a success</p>
             </div>
             <div class="flex flex-row gap-4">
-                <img src="icon-list.svg" alt="icon for list"/>
+                <img src="dist/icon-list.svg" alt="icon for list"/>
                 <p>And much more!</p>
             </div>
             <p class="pt-10">Email address</p>
@@ -29,7 +29,7 @@
             <button type="button" class="bg-darkgrey text-whitee p-3 w-full rounded-lg mt-5">Subscribe to monthly newsletter</button>
       </div>
       <div>
-            <img src="illustration-sign-up-desktop.svg " class="w-full">
+            <img src="dist/illustration-sign-up-desktop.svg" class="w-full">
       </div>
     </div>
 
