--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-darkgrey P">
     <!-- Sign-up form start -->
-    <div class=" bg-whitee rounded-3xl  flex gap-6 p-4 pr-0 w-2/4 ml-auto mr-auto mt-32 ">
+    <div class=" bg-whitee rounded-3xl  flex gap-6 p-4 pr-2 pr-0 w-2/4 ml-auto mr-auto mt-32 ">
       <div class="w-2/4 p-11 pt-16" >
             <h1 class="text-5xl font-bold">Stay updated!</h1>
             <p class="pt-6 pb-6">Join 60,000+ product managers receiving monthly updates on:</p>
