--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pipe's Newsletter</title>
     <link rel="stylesheet" href="dist/output.css"/>
 </head>
 <body class="bg-darkgrey P">
