--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pipe's Newsletter</title>
     <link rel="stylesheet" href="dist/output.css"/>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Qwitcher+Grypen:wght@700&family=Roboto+Serif:wght@100;200;300&family=Roboto:wght@400;700&display=swap');
+    </style>
 </head>
-<body class="bg-white sm:bg-darkgrey P">
+<body class="bg-white sm:bg-darkgrey P font-roboto">
     <!-- Sign-up form start -->
   <div class="flex justify-center items-center h-screen">
     <div class=" bg-whitee sm:rounded-3xl flex flex-col sm:flex-row gap-4 p-0 sm:p-4 h-screen sm:h-auto w-full sm:w-auto">
