--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Sign-up form start -->
   <div class="flex justify-center items-center h-screen">
     <div class=" bg-whitee sm:rounded-3xl flex flex-col sm:flex-row gap-4 p-0 sm:p-4 h-screen sm:h-auto w-full sm:w-auto">
-      <div class="w-full sm:w-2/4 md:w-auto p-11 pt-16 order-last sm:order-first" >
-        <h1 class="text-5xl font-bold mt-6">Stay updated!</h1>
+      <div class="w-full sm:w-2/4 md:w-auto p-11 pt-8 sm:pt-16 order-last sm:order-first" >
+        <h1 class="text-5xl font-bold mt:0 sm:mt-6">Stay updated!</h1>
         <p class="pt-6 pb-6">Join 60,000+ product managers receiving monthly updates on:</p>
         <div class="flex flex-row gap-4 mb-5">
             <img src="dist/icon-list.svg" alt="icon for list"/>
@@ -30,21 +30,21 @@
         </div>
         <p class="pt-12">Email address</p>
         <input class="rounded-lg w-full p-3 border border-solid border-myGrey" type="email"  placeholder="email@company.com"/>
-        <button type="button" class="rounded-lg w-full p-3 bg-darkgrey text-whitee mt-7">Subscribe to monthly newsletter</button>
+        <button type="button" class="rounded-lg w-full p-3 bg-darkgrey text-whitee mt-7" id="btn">Subscribe to monthly newsletter</button>
       </div>
       <div class="w-full sm:w-2/4">
-        <img class="hidden w-full sm:block" src="dist/illustration-sign-up-desktop.svg " alt="illustration-sign-up-desktop"/>
+        <img class="hidden w-full h:auto sm:h-full sm:block" src="dist/illustration-sign-up-desktop.svg " alt="illustration-sign-up-desktop"/>
         <img class="block w-full sm:hidden sm:w-0" src="dist/illustration-sign-up-mobile.svg" alt="illustration for mobile"/>
       </div>
     </div>
     <!-- Sign-up form end -->
     <!-- Success message start -->
-    <div class="w-full hide bg-white p-6 h-screen sm:bg-white sm:w-1/5 sm:p-10 sm:rounded-3xl sm:h-80" >
+    <div class="w-full hide message bg-white p-6 h-screen sm:bg-white sm:w-1/5 sm:p-10 sm:rounded-3xl sm:h-80" >
       <img src="dist/icon-list.svg" alt="icon for list" class="w-16 sm:w-10 pt-20 sm:pt-0"/>
       <h1 class="text-5xl font-bold pt-10 sm:pt-4">Thanks for subscribing!</h1>
       <p class="pt-6 pb-96 sm:pt-6 sm:pb-6"> A confirmation email has been sent to <span class="font-bold">ash@loremcompany.com.</span>
         Please open it and click the button inside to confirm your subscription.</p>
-      <button class="bg-darkgrey text-white w-full py-3 px-6 rounded-lg ">Dismiss message</button>
+      <button class="bg-darkgrey text-white w-full py-3 px-6 rounded-lg">Dismiss message</button>
     </div>
   </div>
 
@@ -60,5 +60,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#"></a>.
   </div> -->
+  <script src="index.js"></script>
 </body>
 </html>
