--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <div class="flex justify-center items-center h-screen">
     <div class=" bg-whitee sm:rounded-3xl flex flex-col sm:flex-row gap-4 p-0 sm:p-4 h-screen sm:h-auto w-full sm:w-auto">
       <div class="w-full sm:w-2/4 md:w-auto p-11 pt-8 sm:pt-16 order-last sm:order-first" >
-        <h1 class="text-3xl sm:text-5xl font-bold mt:0 sm:mt-6">Stay updated!</h1>
-        <p class="py-4 sm:py-6">Join 60,000+ product managers receiving monthly updates on:</p>
-        <div class="flex flex-row gap-4 mb-3 sm:mb-5">
+        <h1 class="text-4xl font-bold sm:text-5xl sm:font-bold mt:0 sm:mt-6">Stay updated!</h1>
+        <p class="py-5 sm:py-6">Join 60,000+ product managers receiving monthly updates on:</p>
+        <div class="flex flex-row gap-4 mb-4 sm:mb-5">
             <img src="dist/icon-list.svg" alt="icon for list"/>
             <p>Product discovery and building what matters</p>
         </div>
-        <div class="flex flex-row gap-4 mb-3 sm:mb-5">
+        <div class="flex flex-row gap-4 mb-4 sm:mb-5">
             <img src="dist/icon-list.svg" alt="icon for list"/>
             <p>Measuring to ensure updates are a success</p>
         </div>
