--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <!-- Sign-up form end -->
     <!-- Success message start -->
-    <div id="successMessage" class="active w-full bg-white p-6 h-screen sm:bg-white sm:w-1/5 sm:p-10 sm:rounded-3xl sm:h-auto" >
+    <div id="successMessage" class="active w-auto bg-white p-8 h-screen sm:bg-white sm:w-1/4 sm:p-10 sm:rounded-3xl sm:h-auto" >
       <img src="dist/icon-list.svg" alt="icon for list" class="w-16 sm:w-10 pt-20 sm:pt-0"/>
       <h1 class="text-5xl font-bold pt-10 sm:pt-4">Thanks for subscribing!</h1>
       <p class="pt-6 pb-96 sm:pt-6 sm:pb-6"> A confirmation email has been sent to <span id="userMail" class="font-bold">ash@loremcompany.com.</span>
